# sonarlock

./: CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  go.mod
.github/workflows/: ci.yml
cmd/snapsync/: main.go
docs/: ARCHITECTURE.md  CONFIG.md  SAFETY.md  TUNING.md
include/sonarlock/app/: cli.hpp
include/sonarlock/audio/: audio_factory.hpp  fake_audio_backend.hpp  portaudio_backend.hpp
include/sonarlock/core/: action_policy.hpp  audio_backend.hpp  calibration.hpp  dsp_pipeline.hpp  dsp_primitives.hpp  event_journal.hpp  logger.hpp  motion_detection.hpp  session_controller.hpp  sine_generator.hpp  types.hpp
include/sonarlock/platform/: action_executor.hpp
internal/app/: app.go  app_test.go
internal/buildinfo/: buildinfo.go  buildinfo_test.go
internal/cli/: list.go  recv.go  root.go  root_test.go  send.go  send_recv_test.go  version.go
internal/discovery/: mdns_advertise.go  mdns_browse.go  peer.go  peer_test.go
internal/errors/: errors.go
internal/logging/: logging.go
internal/progress/: progress.go
internal/sanitize/: filename.go  filename_test.go
internal/store/: localid.go  localid_test.go
internal/transfer/: integration_test.go  protocol.go  protocol_test.go  receiver.go  sender.go
src/app/: cli_parser.cpp  main.cpp
src/audio/: audio_factory.cpp  fake_audio_backend.cpp  portaudio_backend.cpp
src/core/: action_policy.cpp  calibration.cpp  dsp_pipeline.cpp  dsp_primitives.cpp  event_journal.cpp  logger.cpp  motion_detection.cpp  session_controller.cpp  sine_generator.cpp
src/platform/: action_executor.cpp
tests/: test_main.cpp
